# barme

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  barme.toml.example
.github/workflows/: ci.yml  pages.yml  release.yml
barme-data/pointers/b/: 66696c652e62696e
charts/barme/: Chart.yaml  README.md  values.yaml
charts/barme/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
crates/barme-auth/: Cargo.toml
crates/barme-auth/src/: lib.rs  sigv4.rs
crates/barme-cdn/: Cargo.toml
crates/barme-cdn/src/: lib.rs
crates/barme-chunk/: Cargo.toml
crates/barme-chunk/src/: lib.rs
crates/barme-codec/: Cargo.toml
crates/barme-codec/src/: lib.rs  raw.rs  zstd_codec.rs
crates/barme-config/: Cargo.toml
crates/barme-config/src/: lib.rs
crates/barme-console/: Cargo.toml
crates/barme-console/src/: lib.rs
crates/barme-core/: Cargo.toml
crates/barme-core/src/: annotation.rs  bucket.rs  hash.rs  key.rs  lib.rs  manifest.rs  merkle.rs  webhook.rs
crates/barme-engine/: Cargo.toml
crates/barme-engine/src/: lib.rs
crates/barme-engine/tests/: backup.rs  buckets.rs  concurrency.rs  merkle_sync.rs  multipart.rs  names.rs  put_get.rs  scale.rs
crates/barme-gc/: Cargo.toml
crates/barme-gc/src/: lib.rs
crates/barme-gc/tests/: gc.rs
crates/barme-native/: Cargo.toml
crates/barme-native/src/: lib.rs
crates/barme-s3/: Cargo.toml
crates/barme-s3/src/: lib.rs
crates/barme-semantic/: Cargo.toml
crates/barme-semantic/src/: embedder.rs  index.rs  lib.rs  semantic.rs
crates/barme-store/: Cargo.toml
crates/barme-store/src/: annotation_store.rs  chunk_store.rs  crypto.rs  key_store.rs  lib.rs  manifest_store.rs  meta_store.rs  pointer_store.rs  reverse_store.rs  webhook_store.rs
crates/barme-store/tests/: end_to_end.rs  format.rs
crates/barmed/: Cargo.toml  build.rs
crates/barmed/src/: main.rs
docs/: ARCHITECTURE.md  DOCKERHUB.md  STABILITY.md  USAGE.md  V1.md
scripts/: abuse-test.sh  crash-test.sh  multipart-abuse.sh  s3_multipart_abuse.py  security-test.sh
site/: architecture.html  docs.html  index.html  robots.txt  sitemap.xml  styles.css  version.js
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: CommandPalette.tsx  Layout.tsx  ObjectPanel.tsx  ShareDialog.tsx  UploadPanel.tsx
web/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown.tsx  input.tsx  logo.tsx  progress.tsx  qrcode.tsx  select.tsx  switch.tsx  tabs.tsx  tooltip.tsx
web/src/lib/: api.ts  auth.tsx  clipboard.ts  dialogs.tsx  format.ts  qr.ts  theme.ts  toast.tsx  uploads.ts
web/src/routes/: Bucket.tsx  Home.tsx  Login.tsx  PotSettings.tsx  Search.tsx  Settings.tsx  Status.tsx
