[package]
name = "barme-cdn"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
barme-core.workspace = true
barme-engine.workspace = true
barme-auth.workspace = true
axum.workspace = true
tokio.workspace = true
serde = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
