[package]
name = "barme-console"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
barme-core.workspace = true
barme-engine.workspace = true
barme-semantic.workspace = true
axum = { workspace = true, features = ["multipart"] }
tokio.workspace = true
maud = "0.26"
urlencoding = "2"
