[package]
name = "barme-native"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
barme-core.workspace = true
barme-engine.workspace = true
barme-semantic.workspace = true
barme-auth.workspace = true
axum.workspace = true
tokio.workspace = true
serde = { workspace = true }
serde_json.workspace = true
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
http-body-util = "0.1"
serde_json.workspace = true
