[package]
name = "barme-s3"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
barme-engine.workspace = true
barme-auth.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
http-body-util = "0.1"
