[package]
name = "barme-semantic"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
barme-core.workspace = true
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
