[package]
name = "barmed"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "barmed"
path = "src/main.rs"

[dependencies]
barme-engine.workspace = true
barme-s3.workspace = true
barme-native.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
