[package]
name = "barmed"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "barmed"
path = "src/main.rs"

[features]
# Build the React console and embed it into the binary, served on :7374.
# Off by default so plain `cargo build` needs no Node toolchain.
ui = ["dep:axum", "dep:rust-embed", "dep:mime_guess"]

[dependencies]
barme-engine.workspace = true
barme-s3.workspace = true
barme-native.workspace = true
barme-semantic.workspace = true
barme-auth.workspace = true
barme-cdn.workspace = true
barme-config.workspace = true
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { workspace = true, optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
